# Task1

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/backend/Module1_NoiseAndFilters/: LowPassFilters.cpp  LowPassFilters.h  Noise&Filteration.md  NoiseGenerator.cpp  NoiseGenerator.h
src/backend/Module2_EdgesAndEntropy/: EdgeDetector.md  EdgeDetectors.cpp  EdgeDetectors.h  Entropy.md  EntropyCalculator.cpp  EntropyCalculator.h
src/backend/Module3_HistogramsAndColor/: ColorTransformations.cpp  ColorTransformations.h  HistogramTools.cpp  HistogramTools.h
src/backend/Module4_Enhancement/: ImageEqualizer.cpp  ImageEqualizer.h  ImageNormalizer.cpp  ImageNormalizer.h
src/backend/Module5_FrequencyAndHybrid/: FrequencyFilters.cpp  FrequencyFilters.h  HybridImageBuilder.cpp  HybridImageBuilder.h
src/frontend/: MainWindow.cpp  MainWindow.h
src/frontend/components/: ImagePanel.cpp  ImagePanel.h  ParameterBox.cpp  ParameterBox.h  TopTaskBar.cpp  TopTaskBar.h
src/frontend/controllers/: AppController.cpp  AppController.h  ImageStateManager.cpp  ImageStateManager.h
src/frontend/ui/: MainWindow.ui
